test/tests/stages/1_int_constants/invalid_parse/misspelled_keyword.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(returns)
  const int(0)
  ;
  }
